--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -177,24 +177,29 @@ interface {{ ethernet_interface.name }}
 {%         endif %}
    {{ tap_mac_address_cli }}
 {%     endif %}
-{%     if ethernet_interface.switchport.tap.encapsulation.vxlan_strip is arista.avd.defined(true) %}
+{%     if ethernet_interface.switchport.tap.mpls_pop_all is arista.avd.defined(true) %}
+   switchport tap mpls pop all
+{%     elif ethernet_interface.switchport.tap.encapsulation.vxlan_strip is arista.avd.defined(true) %}
    switchport tap encapsulation vxlan strip
 {%     endif %}
-{%     if ethernet_interface.switchport.tap.encapsulation.gre_strip is arista.avd.defined(true) %}
-   switchport tap encapsulation gre strip
-{%     endif %}
-{%     if ethernet_interface.switchport.tap.encapsulation.gre.destination is arista.avd.defined or
-         ethernet_interface.switchport.tap.encapsulation.gre.protocol is arista.avd.defined %}
-{%         if ethernet_interface.switchport.tap.encapsulation.gre.destination is arista.avd.defined %}
-{%             set tap_encapsulation_cli = "switchport tap encapsulation gre destination " ~ ethernet_interface.switchport.tap.encapsulation.gre.destination %}
-{%             if ethernet_interface.switchport.tap.encapsulation.gre.source is arista.avd.defined %}
-{%                 set tap_encapsulation_cli = tap_encapsulation_cli ~ " source " ~ ethernet_interface.switchport.tap.encapsulation.gre.source %}
-{%             endif %}
-{%         endif %}
-{%         if ethernet_interface.switchport.tap.encapsulation.gre.protocol is arista.avd.defined %}
-{%             set tap_encapsulation_cli = tap_encapsulation_cli ~ " protocol " ~ ethernet_interface.switchport.tap.encapsulation.gre.protocol %}
-{%         endif %}
+{%     if ethernet_interface.switchport.tap.encapsulation.gre is arista.avd.defined %}
+{%         for gre_strip_config in ethernet_interface.switchport.tap.encapsulation.gre %}
+{%             if gre_strip_config.strip is arista.avd.defined(true) %}
+{%                 set tap_encapsulation_cli = "switchport tap encapsulation gre" %}
+{%                 if gre_strip_config.destination is arista.avd.defined %}
+{%                     set tap_encapsulation_cli = tap_encapsulation_cli ~ " destination " ~ gre_strip_config.destination %}
+{%                     if gre_strip_config.source is arista.avd.defined %}
+{%                         set tap_encapsulation_cli = tap_encapsulation_cli ~ " source " ~ gre_strip_config.source %}
+{%                     endif %}
+{%                     if gre_strip_config.protocol is arista.avd.defined %}
+{%                         set tap_encapsulation_cli = tap_encapsulation_cli ~ " protocol " ~ gre_strip_config.protocol %}
+{%                     endif %}
+{%                 elif gre_strip_config.protocol is arista.avd.defined and gre_strip_config.destination is not arista.avd.defined %}
+{%                     set tap_encapsulation_cli = tap_encapsulation_cli ~ " protocol " ~ gre_strip_config.protocol %}
+{%                 endif %}
    {{ tap_encapsulation_cli }} strip
+{%             endif %}
+{%         endfor %}
 {%     endif %}
 {%     if ethernet_interface.switchport.tool.mpls_pop_all is arista.avd.defined(true) %}
    switchport tool mpls pop all
@@ -245,6 +250,9 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.switchport.tool.groups is arista.avd.defined %}
 {%         set tool_groups = ethernet_interface.switchport.tool.groups | arista.avd.natural_sort | join(" ") %}
    switchport tool group set {{ tool_groups }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.dot1q_remove_outer_vlan_tag is arista.avd.defined %}
+   switchport tool dot1q remove outer {{ ethernet_interface.switchport.tool.dot1q_remove_outer_vlan_tag }}
 {%     endif %}
 {%     if ethernet_interface.switchport.tool.dzgre_preserve is arista.avd.defined(true) %}
    switchport tool dzgre preserve
