--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/mpls-and-ldp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/mpls-and-ldp.j2
@@ -17,6 +17,8 @@
 | LDP Router ID | {{ mpls.ldp.router_id | arista.avd.default('-') }} |
 | LDP Interface Disabled Default | {{ mpls.ldp.interface_disabled_default | arista.avd.default('-') }} |
 | LDP Transport-Address Interface | {{ mpls.ldp.transport_address_interface | arista.avd.default('-') }} |
+| ICMP Fragmentation-Needed Tunneling Enabled | {{ mpls.icmp.fragmentation_needed_tunneling | arista.avd.default('-') }} |
+| ICMP TTL-Exceeded Tunneling Enabled | {{ mpls.icmp.ttl_exceeded_tunneling | arista.avd.default('-') }} |
 
 #### MPLS and LDP Device Configuration
 
