Moving required key for vlan_translations

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -122,6 +122,9 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.switchport.phone.trunk is arista.avd.defined %}
    switchport phone trunk {{ port_channel_interface.switchport.phone.trunk }}
 {%     endif %}
+{%     if port_channel_interface.switchport.vlan_translations.required is arista.avd.defined(true) %}
+   switchport vlan translation in required
+{%     endif %}
 {%     if port_channel_interface.switchport.dot1q.vlan_tag is arista.avd.defined %}
    switchport dot1q vlan tag {{ port_channel_interface.switchport.dot1q.vlan_tag }}
 {%     endif %}
@@ -165,9 +168,7 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.switchport.vlan_translations.direction_in is arista.avd.defined %}
 {%         for vlan_translation in port_channel_interface.switchport.vlan_translations.direction_in %}
 {%             set vlan_translation_in_cli = 'switchport vlan translation in' %}
-{%             if vlan_translation.required is arista.avd.defined(true) %}
-{%                 set vlan_translation_in_cli = vlan_translation_in_cli ~ ' required' %}
-{%             elif vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
+{%             if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
 {%                 set vlan_translation_in_cli = 'switchport vlan translation in ' ~  vlan_translation.from %}
 {%                 if vlan_translation.dot1q_tunnel is arista.avd.defined(true) %}
 {%                     set vlan_translation_in_cli = vlan_translation_in_cli ~ ' dot1q-tunnel' %}
