Fix(eos_cli_config_gen): Fixing the wrong CLI generated for radius-server dynamic-authorizaton

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/radius-server.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/radius-server.j2
@@ -16,18 +16,14 @@
 {%         endif %}
 {{ attribute_32_include_in_access_cli }}
 {%     endif %}
+{%     if radius_server.dynamic_authorization.port is arista.avd.defined %}
+radius-server dynamic-authorization port {{ radius_server.dynamic_authorization.port }}
+{%     endif %}
 {%     if radius_server.tls_ssl_profile is arista.avd.defined %}
 radius-server tls ssl-profile {{ radius_server.tls_ssl_profile }}
 {%     endif %}
-{%     if radius_server.dynamic_authorization is arista.avd.defined %}
-{%         set dynamic_authorization_cli = "radius-server dynamic-authorization" %}
-{%         if radius_server.dynamic_authorization.port is arista.avd.defined %}
-{%             set dynamic_authorization_cli = dynamic_authorization_cli ~ " port " ~ radius_server.dynamic_authorization.port %}
-{%         endif %}
-{%         if radius_server.dynamic_authorization.tls_ssl_profile is arista.avd.defined %}
-{%             set dynamic_authorization_cli = dynamic_authorization_cli ~ " tls ssl-profile " ~ radius_server.dynamic_authorization.tls_ssl_profile %}
-{%         endif %}
-{{ dynamic_authorization_cli }}
+{%     if radius_server.dynamic_authorization.tls_ssl_profile is arista.avd.defined %}
+radius-server dynamic-authorization tls ssl-profile {{ radius_server.dynamic_authorization.tls_ssl_profile }}
 {%     endif %}
 {%     for radius_host in radius_server.hosts | arista.avd.default([]) %}
 {%         set radius_cli = "radius-server host " ~ radius_host.host %}
