Apply suggestions from code review
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/radius-server.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/radius-server.j2
@@ -27,7 +27,7 @@
 {%     endif %}
 {%     if radius_server.dynamic_authorization.tls_ssl_profile is arista.avd.defined %}
 
-- Dynamic Authorization for TLS connections uses SSL profile - {{ radius_server.dynamic_authorization.tls_ssl_profile }}
+- Dynamic Authorization for TLS connections uses SSL profile {{ radius_server.dynamic_authorization.tls_ssl_profile }}
 {%     endif %}
 
 #### RADIUS Server Hosts
