--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -379,6 +379,9 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.ptp.delay_mechanism is arista.avd.defined %}
    ptp delay-mechanism {{ port_channel_interface.ptp.delay_mechanism }}
 {%     endif %}
+{%     if port_channel_interface.ptp.profile.g8275_1.destination.mac_address is arista.avd.defined %}
+   ptp profile g8275.1 destination mac-address {{ port_channel_interface.ptp.profile.g8275_1.destination.mac_address }}
+{%     endif %}
 {%     if port_channel_interface.ptp.sync_message.interval is arista.avd.defined %}
    ptp sync-message interval {{ port_channel_interface.ptp.sync_message.interval }}
 {%     endif %}
