--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/mpls.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/mpls.j2
@@ -26,7 +26,7 @@ mpls ldp
    transport-address interface {{ mpls.ldp.transport_address_interface }}
 {%     endif %}
 {% endif %}
-{% if mpls.icmp is arista.avd.defined %}
+{% if mpls.icmp.fragmentation_needed_tunneling is arista.avd.defined(true) or mpls.icmp.ttl_exceeded_tunneling is arista.avd.defined(true) %}
 !
 {%     if mpls.icmp.fragmentation_needed_tunneling is arista.avd.defined(true) %}
 mpls icmp fragmentation-needed tunneling
