--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -242,22 +242,24 @@ interface {{ ethernet_interface.name }}
    {{ vlan_translation_in_cli }}
 {%         endfor %}
 {%     endif %}
-{%     for vlan_translation in ethernet_interface.switchport.vlan_translations.direction_out | arista.avd.natural_sort('from') %}
-{%         if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
-{%             set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from ~ ' ' ~  vlan_translation.to %}
-{%             if vlan_translation.inner_vlan_to is arista.avd.defined %}
-{%                 set vlan_translation_out_cli = vlan_translation_out_cli ~ ' inner ' ~ vlan_translation.inner_vlan_to %}
+{%     if ethernet_interface.switchport.vlan_translations.direction_out is arista.avd.defined %}
+{%         for vlan_translation in ethernet_interface.switchport.vlan_translations.direction_out %}
+{%             if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
+{%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from ~ ' ' ~  vlan_translation.to %}
+{%                 if vlan_translation.inner_vlan_to is arista.avd.defined %}
+{%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' inner ' ~ vlan_translation.inner_vlan_to %}
+{%                 endif %}
+{%             elif vlan_translation.from is arista.avd.defined and vlan_translation.dot1q_tunnel is arista.avd.defined %}
+{%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from %}
+{%                 if vlan_translation.dot1q_tunnel.all is arista.avd.defined(true) %}
+{%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel all' %}
+{%                 elif vlan_translation.dot1q_tunnel.to is arista.avd.defined %}
+{%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel ' ~ vlan_translation.dot1q_tunnel.to %}
+{%                 endif %}
 {%             endif %}
-{%         elif vlan_translation.from is arista.avd.defined and vlan_translation.dot1q_tunnel is arista.avd.defined %}
-{%             set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from %}
-{%             if vlan_translation.dot1q_tunnel.all is arista.avd.defined(true) %}
-{%                 set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel all' %}
-{%             elif vlan_translation.dot1q_tunnel.to is arista.avd.defined %}
-{%                 set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel ' ~ vlan_translation.dot1q_tunnel.to %}
-{%             endif %}
-{%         endif %}
    {{ vlan_translation_out_cli }}
-{%     endfor %}
+{%         endfor %}
+{%     endif %}
 {%     if ethernet_interface.switchport.trunk.private_vlan_secondary is arista.avd.defined(true) %}
    switchport trunk private-vlan secondary
 {%     endif %}
