--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -180,49 +180,29 @@ interface {{ port_channel_interface.name }}
    {{ vlan_translation_in_cli }}
 {%         endfor %}
 {%     endif %}
-{%     for vlan_translation in port_channel_interface.switchport.vlan_translations.direction_out | arista.avd.natural_sort('from') %}
-{%         if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
-{%             set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from ~ ' ' ~  vlan_translation.to %}
-{%             if vlan_translation.inner_vlan_to is arista.avd.defined %}
-{%                 set vlan_translation_out_cli = vlan_translation_out_cli ~ ' inner ' ~ vlan_translation.inner_vlan_to %}
+{%     if port_channel_interface.switchport.vlan_translations.direction_out is arista.avd.defined %}
+{%         for vlan_translation in port_channel_interface.switchport.vlan_translations.direction_out %}
+{%             if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
+{%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from ~ ' ' ~  vlan_translation.to %}
+{%                 if vlan_translation.inner_vlan_to is arista.avd.defined %}
+{%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' inner ' ~ vlan_translation.inner_vlan_to %}
+{%                 endif %}
+{%             elif vlan_translation.from is arista.avd.defined and vlan_translation.dot1q_tunnel is arista.avd.defined %}
+{%                 set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from %}
+{%                 if vlan_translation.dot1q_tunnel.all is arista.avd.defined(true) %}
+{%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel all' %}
+{%                 elif vlan_translation.dot1q_tunnel.to is arista.avd.defined %}
+{%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel ' ~ vlan_translation.dot1q_tunnel.to %}
+{%                 endif %}
 {%             endif %}
-{%         elif vlan_translation.from is arista.avd.defined and vlan_translation.dot1q_tunnel is arista.avd.defined %}
-{%             set vlan_translation_out_cli = 'switchport vlan translation out ' ~  vlan_translation.from %}
-{%             if vlan_translation.dot1q_tunnel.all is arista.avd.defined(true) %}
-{%                 set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel all' %}
-{%             elif vlan_translation.dot1q_tunnel.to is arista.avd.defined %}
-{%                 set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel ' ~ vlan_translation.dot1q_tunnel.to %}
-{%             endif %}
-{%         endif %}
    {{ vlan_translation_out_cli }}
-{%     endfor %}
+{%         endfor %}
+{%     endif %}
 {%     if port_channel_interface.switchport.trunk.private_vlan_secondary is arista.avd.defined(true) %}
    switchport trunk private-vlan secondary
 {%     endif %}
 {%     if port_channel_interface.switchport.pvlan_mapping is arista.avd.defined %}
    switchport pvlan mapping {{ port_channel_interface.switchport.pvlan_mapping }}
-{%     endif %}
-{%     if port_channel_interface.switchport.backup_link.interface is arista.avd.defined %}
-{%         set backup_link_cli = "switchport backup-link " ~ port_channel_interface.switchport.backup_link.interface %}
-{%         if port_channel_interface.switchport.backup_link.prefer_vlan is arista.avd.defined %}
-{%             set backup_link_cli = backup_link_cli ~ " prefer vlan " ~ port_channel_interface.switchport.backup_link.prefer_vlan %}
-{%         endif %}
-   {{ backup_link_cli }}
-{%         if port_channel_interface.switchport.backup.preemption_delay is arista.avd.defined %}
-   switchport backup preemption-delay {{ port_channel_interface.switchport.backup.preemption_delay }}
-{%         endif %}
-{%         if port_channel_interface.switchport.backup.mac_move_burst is arista.avd.defined %}
-   switchport backup mac-move-burst {{ port_channel_interface.switchport.backup.mac_move_burst }}
-{%         endif %}
-{%         if port_channel_interface.switchport.backup.mac_move_burst_interval is arista.avd.defined %}
-   switchport backup mac-move-burst-interval {{ port_channel_interface.switchport.backup.mac_move_burst_interval }}
-{%         endif %}
-{%         if port_channel_interface.switchport.backup.initial_mac_move_delay is arista.avd.defined %}
-   switchport backup initial-mac-move-delay {{ port_channel_interface.switchport.backup.initial_mac_move_delay }}
-{%         endif %}
-{%         if port_channel_interface.switchport.backup.dest_macaddr is arista.avd.defined %}
-   switchport backup dest-macaddr {{ port_channel_interface.switchport.backup.dest_macaddr }}
-{%         endif %}
 {%     endif %}
 {%     if port_channel_interface.l2_protocol.encapsulation_dot1q_vlan is arista.avd.defined %}
    l2-protocol encapsulation dot1q vlan {{ port_channel_interface.l2_protocol.encapsulation_dot1q_vlan }}
@@ -473,6 +453,28 @@ interface {{ port_channel_interface.name }}
 {%     endif %}
 {%     if port_channel_interface.pim.ipv4.bfd is arista.avd.defined(true) %}
    pim ipv4 bfd
+{%     endif %}
+{%     if port_channel_interface.switchport.backup_link.interface is arista.avd.defined %}
+{%         set backup_link_cli = "switchport backup-link " ~ port_channel_interface.switchport.backup_link.interface %}
+{%         if port_channel_interface.switchport.backup_link.prefer_vlan is arista.avd.defined %}
+{%             set backup_link_cli = backup_link_cli ~ " prefer vlan " ~ port_channel_interface.switchport.backup_link.prefer_vlan %}
+{%         endif %}
+   {{ backup_link_cli }}
+{%         if port_channel_interface.switchport.backup.preemption_delay is arista.avd.defined %}
+   switchport backup preemption-delay {{ port_channel_interface.switchport.backup.preemption_delay }}
+{%         endif %}
+{%         if port_channel_interface.switchport.backup.mac_move_burst is arista.avd.defined %}
+   switchport backup mac-move-burst {{ port_channel_interface.switchport.backup.mac_move_burst }}
+{%         endif %}
+{%         if port_channel_interface.switchport.backup.mac_move_burst_interval is arista.avd.defined %}
+   switchport backup mac-move-burst-interval {{ port_channel_interface.switchport.backup.mac_move_burst_interval }}
+{%         endif %}
+{%         if port_channel_interface.switchport.backup.initial_mac_move_delay is arista.avd.defined %}
+   switchport backup initial-mac-move-delay {{ port_channel_interface.switchport.backup.initial_mac_move_delay }}
+{%         endif %}
+{%         if port_channel_interface.switchport.backup.dest_macaddr is arista.avd.defined %}
+   switchport backup dest-macaddr {{ port_channel_interface.switchport.backup.dest_macaddr }}
+{%         endif %}
 {%     endif %}
 {%     if port_channel_interface.vmtracer is arista.avd.defined(true) %}
    vmtracer vmware-esx
