--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/monitoring.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/monitoring.j2
@@ -21,6 +21,7 @@
        or mcs_client is arista.avd.defined
        or snmp_server is arista.avd.defined
        or monitor_sessions is arista.avd.defined
+       or monitor_sessions_default_encapsulation_gre is arista.avd.defined
        or tap_aggregation is arista.avd.defined
        or sflow is arista.avd.defined
        or hardware_counters is arista.avd.defined
