--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -201,16 +201,6 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.switchport.source_interface is arista.avd.defined %}
    switchport source-interface {{ ethernet_interface.switchport.source_interface }}
 {%     endif %}
-{%     for vlan_translation in ethernet_interface.switchport.vlan_translations | arista.avd.natural_sort('direction') %}
-{%         if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
-{%             set vlan_translation_cli = 'switchport vlan translation' %}
-{%             if vlan_translation.direction | arista.avd.default in ['in', 'out'] %}
-{%                 set vlan_translation_cli = vlan_translation_cli ~ ' ' ~ vlan_translation.direction %}
-{%             endif %}
-{%             set vlan_translation_cli = vlan_translation_cli ~ ' ' ~ vlan_translation.from ~ ' ' ~ vlan_translation.to %}
-   {{ vlan_translation_cli }}
-{%         endif %}
-{%     endfor %}
 {%     for vlan_translation in ethernet_interface.switchport.vlan_translations.direction_both | arista.avd.natural_sort('from') %}
 {%         set vlan_translation_both_cli = 'switchport vlan translation' %}
 {%         if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
@@ -224,12 +214,11 @@ interface {{ ethernet_interface.name }}
 {%                 endif %}
 {%             endif %}
 {%             set vlan_translation_both_cli = vlan_translation_both_cli ~ ' ' ~  vlan_translation.to %}
-{%         endif %}
    {{ vlan_translation_both_cli }}
+{%         endif %}
 {%     endfor %}
 {%     if ethernet_interface.switchport.vlan_translations.direction_in is arista.avd.defined %}
 {%         for vlan_translation in ethernet_interface.switchport.vlan_translations.direction_in %}
-{%             set vlan_translation_in_cli = 'switchport vlan translation in' %}
 {%             if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
 {%                 set vlan_translation_in_cli = 'switchport vlan translation in ' ~  vlan_translation.from %}
 {%                 if vlan_translation.dot1q_tunnel is arista.avd.defined(true) %}
@@ -238,8 +227,8 @@ interface {{ ethernet_interface.name }}
 {%                     set vlan_translation_in_cli = vlan_translation_in_cli ~ ' inner ' ~ vlan_translation.inner_vlan_from %}
 {%                 endif %}
 {%                 set vlan_translation_in_cli = vlan_translation_in_cli ~ " " ~  vlan_translation.to %}
-{%             endif %}
    {{ vlan_translation_in_cli }}
+{%             endif %}
 {%         endfor %}
 {%     endif %}
 {%     if ethernet_interface.switchport.vlan_translations.direction_out is arista.avd.defined %}
@@ -257,7 +246,9 @@ interface {{ ethernet_interface.name }}
 {%                     set vlan_translation_out_cli = vlan_translation_out_cli ~ ' dot1q-tunnel ' ~ vlan_translation.dot1q_tunnel.to %}
 {%                 endif %}
 {%             endif %}
+{%             if vlan_translation_out_cli is arista.avd.defined %}
    {{ vlan_translation_out_cli }}
+{%             endif %}
 {%         endfor %}
 {%     endif %}
 {%     if ethernet_interface.switchport.trunk.private_vlan_secondary is arista.avd.defined(true) %}
