Simplify schema based on feedback

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -685,8 +685,8 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.ptp.enable is arista.avd.defined(true) %}
    ptp enable
 {%     endif %}
-{%     if ethernet_interface.ptp.profile.g8275_1.destination.mac_address is arista.avd.defined %}
-   ptp profile g8275.1 destination mac-address {{ ethernet_interface.ptp.profile.g8275_1.destination.mac_address }}
+{%     if ethernet_interface.ptp.profile.g8275_1.destination_mac_address is arista.avd.defined %}
+   ptp profile g8275.1 destination mac-address {{ ethernet_interface.ptp.profile.g8275_1.destination_mac_address }}
 {%     endif %}
 {%     if ethernet_interface.ptp.sync_message.interval is arista.avd.defined %}
    ptp sync-message interval {{ ethernet_interface.ptp.sync_message.interval }}
