--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/application-traffic-recognition.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/application-traffic-recognition.j2
@@ -14,8 +14,8 @@
 
 #### IPv4 Applications
 
-| Name | Source Prefix | Destination Prefix | Protocols | Protocol Ranges | TCP Source Port Set | TCP Destination Port Set | UDP Source Port Set | UDP Destination Port Set |
-| ---- | ------------- | ------------------ | --------- | --------------- | ------------------- | ------------------------ | ------------------- | ------------------------ |
+| Name | Source Prefix | Destination Prefix | Protocols | Protocol Ranges | TCP Source Port Set | TCP Destination Port Set | UDP Source Port Set | UDP Destination Port Set | DSCP |
+| ---- | ------------- | ------------------ | --------- | --------------- | ------------------- | ------------------------ | ------------------- | ------------------------ | ---- |
 {%             for application in application_traffic_recognition.applications.ipv4_applications | arista.avd.natural_sort('name') %}
 {%                 set src_prefix = application.src_prefix_set_name | arista.avd.default("-") %}
 {%                 set dest_prefix = application.dest_prefix_set_name | arista.avd.default("-") %}
@@ -25,7 +25,8 @@
 {%                 set udp_dest_port = application.udp_dest_port_set_name | arista.avd.default("-") %}
 {%                 set protocol_ranges = ", ".join(application.protocol_ranges | arista.avd.default(["-"])) %}
 {%                 set protocol = ", ".join(application.protocols | arista.avd.default(["-"])) %}
-| {{ application.name }} | {{ src_prefix }} | {{ dest_prefix }} | {{ protocol }} | {{ protocol_ranges }} | {{ tcp_src_port }} | {{ tcp_dest_port }} | {{ udp_src_port }} | {{ udp_dest_port }} |
+{%                 set dscp_ranges = ", ".join(application.dscp_ranges | arista.avd.default(["-"])) %}
+| {{ application.name }} | {{ src_prefix }} | {{ dest_prefix }} | {{ protocol }} | {{ protocol_ranges }} | {{ tcp_src_port }} | {{ tcp_dest_port }} | {{ udp_src_port }} | {{ udp_dest_port }} | {{ dscp_ranges }} |
 {%             endfor %}
 {%         endif %}
 {%         if application_traffic_recognition.applications.l4_applications is arista.avd.defined %}
