--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/application-traffic-recognition.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/application-traffic-recognition.j2
@@ -41,7 +41,7 @@ application traffic recognition
       protocol {{ application.protocol_ranges | arista.avd.natural_sort('name') | join(", ") }}
 {%             endif %}
 {%             if application.dscp_ranges is arista.avd.defined %}
-      dscp {{ application.dscp_ranges | arista.avd.natural_sort() | join(", ") }}
+      dscp {{ application.dscp_ranges | join(" ") }}
 {%             endif %}
 {%         endfor %}
 {%         for application in application_traffic_recognition.applications.l4_applications | arista.avd.natural_sort('name') %}
