Address review comments and add port-security for port-channel interface

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -315,6 +315,38 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.mlag is arista.avd.defined %}
    mlag {{ port_channel_interface.mlag }}
 {%     endif %}
+{%     if port_channel_interface.switchport.port_security is arista.avd.defined %}
+{%         if port_channel_interface.switchport.port_security.enabled is arista.avd.defined(true) or port_channel_interface.switchport.port_security.violation.mode is arista.avd.defined('shutdown') %}
+   switchport port-security
+{%         elif port_channel_interface.switchport.port_security.violation.mode is arista.avd.defined('protect') %}
+{%             if port_channel_interface.switchport.port_security.violation.protect_log is arista.avd.defined(true) %}
+   switchport port-security violation protect log
+{%             else %}
+   switchport port-security violation protect
+{%             endif %}
+{%         endif %}
+{%         if port_channel_interface.switchport.port_security.mac_address_maximum.disabled is arista.avd.defined(true) %}
+   switchport port-security mac-address maximum disabled
+{%         elif port_channel_interface.switchport.port_security.mac_address_maximum.disabled is arista.avd.defined(false) %}
+   no switchport port-security mac-address maximum disabled
+{%         elif port_channel_interface.switchport.port_security.mac_address_maximum.limit is arista.avd.defined %}
+   switchport port-security mac-address maximum {{ port_channel_interface.switchport.port_security.mac_address_maximum.limit }}
+{%         endif %}
+{%         if port_channel_interface.switchport.port_security.violation.mode is not arista.avd.defined('protect')  %}
+{%             if port_channel_interface.switchport.port_security.vlans is arista.avd.defined %}
+{%                 for vlan in port_channel_interface.switchport.port_security.vlans %}
+{%                     if vlan.range is arista.avd.defined and vlan.mac_address_maximum is arista.avd.defined %}
+{%                         for id in vlan.range | arista.avd.range_expand %}
+   switchport port-security vlan {{ id }} mac-address maximum {{ vlan.mac_address_maximum }}
+{%                         endfor %}
+{%                     endif %}
+{%                 endfor %}
+{%             endif %}
+{%             if port_channel_interface.switchport.port_security.vlan_default_mac_address_maximum is arista.avd.defined %}
+   switchport port-security vlan default mac-address maximum {{ port_channel_interface.switchport.port_security.vlan_default_mac_address_maximum }}
+{%             endif %}
+{%         endif %}
+{%     endif %}
 {%     if port_channel_interface.qos.trust is arista.avd.defined %}
 {%         if port_channel_interface.qos.trust == 'disabled' %}
    no qos trust
